feat: add LensWidget & LensSideNav

--- a/theme/styles/layout.scss
+++ b/theme/styles/layout.scss
@@ -9,3 +9,51 @@ html {
 .st-text {
   color: var(--st-c-text);
 }
+
+.lens-nav-bg {
+  background: rgba(255, 255, 255, 0.75);
+  transition: all 0.6s ease-in-out;
+  backdrop-filter: saturate(180%) blur(10px);
+
+  &:hover {
+    background: rgba(255, 255, 255, 0.95);
+  }
+
+  &.active-header {
+    backdrop-filter: saturate(180%) blur(10px);
+  }
+
+  &:not(.active-header) {
+    border-radius: 50px;
+  }
+
+  @at-root html.dark & {
+    background: rgba(0, 0, 0, 0.65);
+    transition: all 0.6s ease-in-out;
+    backdrop-filter: saturate(180%) blur(10px);
+
+    &:hover {
+      background: rgba(0, 0, 0, 0.95);
+    }
+
+    &.active-header {
+      backdrop-filter: saturate(180%) blur(10px);
+    }
+
+    &:not(.active-header) {
+      border-radius: 50px;
+      // border-width 为动态数值
+      border-style: solid;
+      border-color: #222222;
+      box-shadow: 0 4px 12px rgba(33, 33, 33, 0.5);
+    }
+
+    a {
+      color: #cccccc;
+
+      &:hover {
+        box-shadow: inset 0 0 10px rgba(33, 33, 33, 0.1);
+      }
+    }
+  }
+}
