--- a/theme/styles/vars.scss
+++ b/theme/styles/vars.scss
@@ -7,7 +7,7 @@ $common: map.merge((), $common);
 // palette
 $light: (
   'c-brand': #3e88f6,
-  'c-link': 'var(--st-c-brand)',
+  'c-link': 'var(--lens-c-brand)',
 
   'c-text': #101820,
 ) !default;
