--- a/theme/styles/layout.scss
+++ b/theme/styles/layout.scss
@@ -1,13 +1,21 @@
 .link {
-  color: var(--st-c-brand);
+  color: var(--lens-c-brand);
 }
 
 html {
-  color: var(--st-c-text);
+  color: var(--lens-c-text);
 }
 
-.st-text {
-  color: var(--st-c-text);
+html {
+  background-image: url(https://w.wallhaven.cc/full/gp/wallhaven-gpokge.jpg);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
+
+.lens-text {
+  color: var(--lens-c-text);
 }
 
 .lens-nav-bg {
